--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 			</li>
 			<li>
 				<a href="gallery.html">
-					<img src="images/Toge with Friends 2.0.png" height="240" width="295" alt="">
-					<span>my friends</span>
+					<img src="images/BABY KO.jpg" height="240" width="295" alt="">
+					<span>My Beautiful Bebe</span>
 				</a>
 			</li>
 			<li>
